# mkdocs-multisource-docs

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: application.json
mkdocs_multisource_docs/: plugin.py
mkdocs_multisource_docs/src/: config.py  logs.py  main.py  md_utils.py  utils.py
tests/assets/: conf.json
